--- a/app/views/executions/_suts_list.html.erb
+++ b/app/views/executions/_suts_list.html.erb
@@ -32,7 +32,7 @@
 		<% @tmp = nil %>
 		<% @sysconfig.current_hwc.each do |hwc|%>
 			<% if @tmp == nil then%>
-				<li><%= hwc.device.devicetype.name %>-<% hwc.device.name if hwc.device != nil %> on <%= hwc.device.devicetype.positionname%> <% hwc.position.to_s if hwc.position != nil%>
+				<li><%= hwc.device.devicetype.name %>-<%= hwc.device.name if hwc.device != nil %> <% if hwc.position != nil then%>on <%= hwc.device.devicetype.positionname%> <%= hwc.position.to_s %><%end%>
 				<% @tmp = hwc %>
 			<% else %>
 				<% if hwc.device != nil and @tmp.device != nil then %>
