--- a/app/views/executions/show.html.erb
+++ b/app/views/executions/show.html.erb
@@ -2,18 +2,22 @@
 	<h3 class="offset1">Execution Environment</h3><hr>
 	<div class="offset1">
 		<ul>
-			<li>Test Engineer Is: <%= @execution.user.name %></li>
-			<li>Server Under Test Is: <%= @execution.sysconfig.sut.name %></li>
+			<li>Test Engineer Is: <%= @execution.user.name %>, SUT Is: <%= @execution.sysconfig.sut.name %></li>
 			<li>Execution Date Is: <%= @execution.created_at.to_date %></li>
 		</ul>
 	</div>
-	<hr>
+
 	<div class="offset1">
 		<ul>
-		<% @execution.realconfig.each do |d| %>
-		<li>
-			<%= d.devicetype.name if d.devicetype != nil %> - <%= d.name %>
-		</li>
+		<% @execution.realswconfig.each do |d| %>
+			<li>
+				<%= d.devicetype.name if d.devicetype != nil %> - <%= d.name %>
+			</li>
+		<% end %>
+		<% @execution.hwrelationship.each do |h| %>
+			<li>
+				<%= h.device.name if h.device != nil %> on <%= h.position %>
+			</li>
 		<% end %>
 		</ul>
 	</div>
