--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,14 +65,15 @@
         <div class="container">
           <%= link_to "ANTON - Save U from mess!", '#', id: "logo" %>
 		  <% if current_user %><div class="span toright">
-				<%= link_to "Users", '/priviledges' , class: "btn "+yield(:userpage) if current_user.email == "root@oracle.com" %>
+				<%= link_to "User", '/priviledges' , class: "btn "+yield(:userpage) if current_user.email == "root@oracle.com" %>
 				<%= link_to "Device", '/devices', class: "btn "+yield(:devicepage) if current_user.lead? %>
 				<%= link_to "System", '/systems', class: "btn "+yield(:systempage) %>
 				<%= link_to "TestCase", '/testcases', class: "btn "+yield(:testcasepage) if current_user.lead? or current_user.engineer? %>
 				<%= link_to "Config", '/sysconfigs', class: "btn btn-primary "+yield(:configpage) if current_user.lead? or current_user.engineer?%>
-				<%= link_to "Execution", '/executions', class: "btn btn-primary "+yield(:executionpage) if current_user.engineer?%>
-				<%= link_to "Tasks", '/tasks', class: "btn btn-success "+yield(:taskpage) if current_user.lead? or current_user.engineer?%>
-				<%= link_to "Weekly Status", '/achivements', class: "btn btn-success "+yield(:achivepage) if current_user.lead? or current_user.engineer?%>
+				<%= link_to "Execute", '/executions', class: "btn btn-primary "+yield(:executionpage) if current_user.engineer?%>
+				<%= link_to "Task", '/tasks', class: "btn btn-success "+yield(:taskpage) if current_user.lead? or current_user.engineer?%>
+				<%= link_to "Status", '/achivements', class: "btn btn-success "+yield(:achivepage) if current_user.lead? or current_user.engineer?%>
+				<%= link_to "Search", '/searches', class: "btn btn-warning "+yield(:searchpage) %>
 		  </div><% end %>
             <ul class="nav pull-right">
 			  <% if current_user %>
