--- a/app/views/searches/_device_list.html.erb
+++ b/app/views/searches/_device_list.html.erb
@@ -3,7 +3,11 @@
 <div class="span">
 	<%= form_tag controller: "searches", action: "search" do |t| %>
 		<%= hidden_field_tag(:devicecate, @selectcate) %>
-		<div><%= select_tag 'searchobject', options_from_collection_for_select( @devices, :id, :longname, @searchobject.id), :class => "textsize6" %></div>
+		<% if @searchobject != nil then %>
+			<div><%= select_tag 'searchobject', options_from_collection_for_select( @devices, :id, :longname, @searchobject.id), :class => "textsize6" %></div>
+		<% else %>
+			<div><%= select_tag 'searchobject', options_from_collection_for_select( @devices, :id, :longname), :class => "textsize6" %></div>
+		<% end %>
 		<div><%= submit_tag "Search" , :class => "submit btn btn-primary btn-danger" %></div>
 	<% end %>
 </div>
