--- a/app/views/searches/_result_list.html.erb
+++ b/app/views/searches/_result_list.html.erb
@@ -1,10 +1,50 @@
-<h2>Result List</h2><hr>
 
-<ul>
-	<% @tasks.each do |t|%>
-		<li>
-			<%= t.name %>
-		</li>
-	<% end %>
-</ul>
+<div class="tabbable tabs">
+
+	<ul class="nav nav-tabs">
+
+		<% @tasks.each do |t|%>
+			<% tabname = "tab" + t.id.to_s %>
+			<li class="<%= 'active' if params[:tab] == tabname %>" >
+				<%= link_to t.name, searches_path(:tab => tabname, :selecttask => t.id) %>
+			</li>
+		<% end %>
+	</ul>
+
+	<div class="tab-content">
+		<% @tasks.each do |t|%>
+			<% tabname = "tab" + t.id.to_s %>
+			<div id='<%=tabname%>' class="<%= if (params[:tab] == tabname) then 'tab-pane active'  else 'tab-pane' end%>" >
+				<% if @selectedexecutions != nil then%>
+					<% tmpcaselabel = 0 %>
+					<% tmpcaseid = 0 %>
+					<% tmpcase = 0 %>
+					<table class="table table-striped table-bordered table-condensed">
+					<% @selectedexecutions.each do |e| %>
+					
+						<% if tmpcaselabel == 0 or tmpcaselabel != e.testcase.caseweightid then %>
+							<tr><td colspan=2><h3><%= e.testcase.caseweightname %></h3></td></tr>
+							<% tmpcaselabel = e.testcase.caseweightid %>
+						<% end %>
+						
+						<% if tmpcaseid == 0 or tmpcaseid != e.testcase.id then %>
+							<% tmpcaseid = e.testcase.id %>
+							<tr>
+								<td><%= e.testcase.name if e.testcase != nil %></td>
+								<td>
+									<% if e.result == "fail" then %>
+										<%= link_to ' x ', execution_path(e),:onclick=>"window.open(this.href,'create_company', 'height=900, width=900');return false;", :class => "btn-mini btn-danger"  %>(cr:<%=e.bug%>)
+									<% else %>
+										<%= link_to " v ", execution_path(e),:onclick=>"window.open(this.href,'create_company', 'height=900, width=900');return false;", :class => "btn-mini btn-success" %>
+									<% end %>
+								</td>					
+							</tr>
+						<% end %>
+					<% end %>
+					</table>
+				<% end %>
+			</div>
+		<% end %>
+	</div>
+</div>
 
