--- a/app/views/searches/_result_list.html.erb
+++ b/app/views/searches/_result_list.html.erb
@@ -1,4 +1,8 @@
 
+<% if @tasks.empty? then %>
+<h2> No test cases have been executed towards <%= @searchobject.name %></h2>
+<% end %>
+
 <div class="tabbable tabs">
 
 	<ul class="nav nav-tabs">
