--- a/app/views/systems/index.html.erb
+++ b/app/views/systems/index.html.erb
@@ -1,16 +1,11 @@
 <% provide(:systempage, 'btn-large') %>
-<div class="row">
-	<div class="bkgrd span12">
-		<%= render 'systems/header_list' %>
-	</div>
-</div>
 
-<div class="row-fluid">
-	<div class="bkgrd span4">
+<div id="allcontent" class="row-fluid">
+	<div class="bkgrd span3">
 		<%= render 'systems/servers_list' %>
 	</div>
 
-	<div class="bkgrd span8">
+	<div class="bkgrd span9">
 		<%= render 'systems/devices_list' %>
 	</div>
 </div>
