--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
           <%= link_to "ANTON - Save U from mess!", '#', id: "logo" %>
 		  <% if current_user %><div class="span toright">
 				<%= link_to "User", '/priviledges' , class: "btn "+yield(:userpage) if current_user.email == "root@oracle.com" %>
-				<%= link_to "Device", '/devices', class: "btn "+yield(:devicepage) if current_user.lead? %>
+				<%= link_to "SW/HW/FW", '/devices', class: "btn "+yield(:devicepage) if current_user.lead? %>
 				<%= link_to "System", '/systems', class: "btn "+yield(:systempage) %>
 				<%= link_to "TestCase", '/testcases', class: "btn "+yield(:testcasepage) if current_user.lead? or current_user.engineer? %>
 				<%= link_to "Config", '/sysconfigs', class: "btn btn-primary "+yield(:configpage) if current_user.lead? or current_user.engineer?%>
@@ -91,7 +91,7 @@
       </div>
     </header>
 	
-    <div class="container">
+    <div>
       <%= yield %>
     </div>
   </body>
