--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -1,18 +1,15 @@
 <% if @selectsut != nil then %>
+	<h2>Current Config Has Following Hardwares</h2><hr>
 	<% if @current_user.lead? then %>
 		<div class="row">
-			<h2>This Server belongs to <%= User.find_by_id(Sut.find_by_id(@selectsut).holder_id).name %> currently</h2>
 			<%= form_tag controller: "sysconfigs", action: "selectuser" do %>
 				<%= hidden_field_tag(:selectsut, @selectsut) %>
-				<div class="span10 center">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
+				<div class="span4 center">Assign SUT to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
 				<div class="span1"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
 			<% end %>
 		</div>
-		<hr>
+		
 	<% end %>
-
-	<h2>Current Config Has Following Hardwares</h2>
-
 	<% if Execution.find_by_sysconfig_id(@currentsysconfig.id) then @editable = false else @editable = true end %>
 	
 	<table class="table table-striped table-bordered table-condensed">
