--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -1,80 +1,43 @@
-<script type="text/javascript" language="JavaScript">
-<!--
-function detailinfo(para1, para2) {
-  document.getElementById(para1).style.display=para2;
-}
---></script>
-<div class="row-fluid">
-	<div class="span3">
-		<h1>My Tasks</h1>
-		<% if current_user.lead? then %>
-			<%= form_tag controller: "tasks", action: "twiki" do %>
-				<%= hidden_field_tag(:selecttask, @selecttask) %>
-				<div class="span"><%= submit_tag "twiki" , :class => "submit label" %></div>
-			<% end %>
-			<%= form_tag controller: "tasks", action: "clonetask" do %>
-				<%= hidden_field_tag(:selecttask, @selecttask) %>
-				<div class="span"><%= submit_tag "clone" , :class => "submit label" %></div>
-			<% end %>
-			<%= form_tag controller: "tasks", action: "changestatus" do %>
-				<%= hidden_field_tag(:selecttask, @selecttask) %>
-				<div class="span"><%= submit_tag "Status" , :class => "submit label" %></div>
-			<% end %>
-		<% end %>
-	</div>
-	<div class="span4">
-		<div class="span">
+<h2>My Projects <% if @tasklist != nil then %>(<%= @tasklist.count %>)<% end %></h2><hr>
+
+<% if @tasklist != nil then %> 
+	<% if @tasklist.count != 0 then %>
 		<%= form_tag controller: "tasks", action: "selecttask" do %>
-			<% if @tasklist != nil then if @tasklist.count != 0 then %>
-				<%= select_tag 'selecttask', options_from_collection_for_select( @tasklist, :id, :name, @selecttask ), :class => "textsize10", onchange: "this.form.submit();"  %>
-				<%= link_to "x", @task, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? %>
-			<% else %>
-				<h2><br>No tasks existed</h2>
-			<% end %>
-			<% else %>
-				<h2><br>No tasks existed</h2>
+			<% @tasklist.each do |t| %>
+				<div class="row">
+					<%= radio_button_tag "selecttask", t.id, if @selecttask.to_i == t.id then true else false end, onchange: "this.form.submit();", class: "span3"  %><%= t.name %>
+					<%= link_to "x", t, method: :delete, data: { confirm: "Sure?" }, class: "span toright" if current_user.root? %>
+				</div>
 			<% end %>
 		<% end %>
-		</div><div class="span">
-		<% if current_user.lead? then %>
-			<%= form_tag controller: "tasks", action: "addtask" do |t| %>
-				<div><%= text_field_tag :name,"",placeholder: "Add New Task", onfocus: 'detailinfo("detailtask","block")' %></div>
-				<div id="detailtask", style="display:none"><%= select_tag 'selectsystem', options_from_collection_for_select( @systems, :id, :name) %>
-				<%= text_area_tag :note, "",placeholder: "Note..." %>
-				<%= submit_tag "Add New Task" , :class => "submit btn btn-mini btn-danger" %></div>
-			<% end %>
+	<% else %>
+		<h2><br>No tasks existed</h2>
+	<% end %>
+<% else %>
+	<h2><br>No tasks existed</h2>
+<% end %>
+<% if current_user.lead? then %>
+	<div class="row newpost">
+		<%= form_tag controller: "tasks", action: "addtask" do |t| %>
+			<div><%= text_field_tag :name,"",placeholder: "Add New Task"%></div>
+			<div><%= select_tag 'selectsystem', options_from_collection_for_select( @systems, :id, :name) %>
+			<%= text_area_tag :note, "",placeholder: "Note..." %>
+			<%= submit_tag "Add New Task" , :class => "submit btn btn-mini btn-danger" %></div>
 		<% end %>
-		</div>
 	</div>
-	<div class="span3">
+<% end %>
 
-		<% if @selecttask != nil then %>
-		<div class="span">
-			<%= form_tag controller: "tasks", action: "selecttarget" do %>
+<% if @selecttask != nil then %>	
+	<% if current_user.lead? then %>
+		<div class="row newpost">	
+			<%= form_tag controller: "tasks", action: "addtarget" do |t| %>
 				<%= hidden_field_tag(:selecttask, @selecttask) %>
-				<%= select_tag 'selecttarget', options_from_collection_for_select( @targetlist, :id, :name, @selecttarget ), :class => "textsize8", onchange: "this.form.submit();"  if @targetlist != nil%>
-				<%= link_to "x", @target, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? and @target != nil %>
+				<div><%= text_field_tag :name,"",placeholder: "Add New Target", onfocus: 'detailinfo("detailtarget","block")' %></div>
+				<div><%= text_area_tag :note, "", :class => "textsize10", placeholder: "Note..." %>
+				<%= submit_tag "Add New Target" , :class => "submit btn btn-mini btn-danger" %></div>
 			<% end %>
 		</div>
-		<div class="span">	
-			<% if current_user.lead? then %>
-				<%= form_tag controller: "tasks", action: "addtarget" do |t| %>
-					<%= hidden_field_tag(:selecttask, @selecttask) %>
-					<div><%= text_field_tag :name,"",placeholder: "Add New Target", onfocus: 'detailinfo("detailtarget","block")' %></div>
-					<div id = "detailtarget", style="display:none"><%= text_area_tag :note, "", :class => "textsize10", placeholder: "Note..." %>
-					<%= submit_tag "Add New Target" , :class => "submit btn btn-mini btn-danger" %></div>
-				<% end %>
-			<% end %>
-		<% end %>
-		</div>
-	</div>
-	
-	<div class="span toright">
-		<%= form_tag controller: "tasks", action: "calculate" do %>
-			<%= hidden_field_tag(:selecttask, @selecttask) %>
-			<%= hidden_field_tag(:selecttarget, @selecttarget) %>
-			<div class="span2"><%= submit_tag "Update" , :class => "submit btn-large btn-danger" if current_user.lead? %></div>
-		<% end %>
-	</div>
+	<% end %>
+<% end %>
 
-</div>
+
