--- a/app/assets/stylesheets/textsize.css.scss
+++ b/app/assets/stylesheets/textsize.css.scss
@@ -1,3 +1,9 @@
+.mainframe {
+  margin-top: 10px;
+  padding-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
 .bkgrd {
   margin-top: 10px;
