--- a/app/views/systems/_devices_list.html.erb
+++ b/app/views/systems/_devices_list.html.erb
@@ -3,15 +3,18 @@
 <ul>
 	<% if @devicelist != nil then %>
 		<table class="table table-striped table-bordered table-condensed">
-			<tr><td>Device Name</td><td>Type</td><% if @selectcate == "Hardware" then %> <td>Max Cfg</td> <% end %><td></td></tr>
+			<tr><td>Device Name</td><td>Type</td> <td>Added By</td> <td>Max Cfg</td><td>Opt</td></tr>
 			<% @devicelist.each do |d| %>
 				<tr>
 					<td onmouseover="ShowContent('<%= d.name %>');" onmouseout="HideContent('<%= d.name %>');"><%= d.name %></td>
 					<div id='<%= d.name %>' class="showmoreinfo">Note:<hr><%= simple_format(d.note) %></div>
 					<td><%= d.devicetype.name%></td> 
-					<% if @selectcate == "Hardware" then %>
-						<td><%= Avlrelationship.find_by_system_id_and_device_id(@selectsystem, d.id).maxnum %></td> 
-					<% end %>
+					<td><%= d.user.name if d.user != nil%></td>
+					<td>
+						<% if @selectcate == "Hardware" then %>
+							<%= Avlrelationship.find_by_system_id_and_device_id(@selectsystem, d.id).maxnum %>
+						<% end %>
+					</td> 
 					<td><%= link_to "x", Avlrelationship.find_by_system_id_and_device_id(@selectsystem,d.id), method: :delete, data: { confirm: "Sure?" }, class: "" if current_user == System.find_by_id(@selectsystem).user%></td>
 				</tr>
 			<% end %>
@@ -23,8 +26,7 @@
 </ul>
 
 <% if @selectsystem != nil then %>
-	<% if current_user == System.find_by_id(@selectsystem).user then %>
-		<div class="row newpost"><h2>Add SW/HW/FW To System AVL</h2>
+	<div class="row newpost"><h2>Add SW/HW/FW To System AVL</h2>
 		<%= form_tag controller: "systems", action: "selecttype" do %>
 			<%= hidden_field_tag(:devicecate, @selectcate) %>
 			<%= hidden_field_tag(:selectsystem, @selectsystem) %>
@@ -42,7 +44,6 @@
 				<div class="span9"><%= submit_tag "Add In", class: "btn btn-primary btn-success" %></div>
 			</div>
 		<% end %>
-	</div>
-	<% end %>		
+	</div>		
 <% end %>			
 						
