--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -18,7 +18,8 @@
 
 <div class="tab-content">
 
-	<% tabname = "taboverall" %>	
+	<% tabname = "taboverall" %>
+	Linux command is: <%= @linuxcmd%><br>
 	<div id='<%=tabname%>' class="<%= if (params[:tab] == tabname) then 'tab-pane active'  else 'tab-pane' end%>" >
 			
 		<% if @task != nil then %>
