--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -19,7 +19,7 @@
 <div class="tab-content">
 
 	<% tabname = "taboverall" %>
-	Linux command is: <%= @linuxcmd%><br>
+	Logs are located in: <%= @task.svnlink %><hr>
 	<div id='<%=tabname%>' class="<%= if (params[:tab] == tabname) then 'tab-pane active'  else 'tab-pane' end%>" >
 			
 		<% if @task != nil then %>
